[project]
name = "beliefstate"
version = "1.0.2"
description = "A sidecar belief state tracker for LLM agents to detect contradictions and maintain persistent facts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abhay Tiwari" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24.0",
    "tenacity>=8.0.0",
    "aiosqlite>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/abhay-2108/beliefstate"
Repository = "https://github.com/abhay-2108/beliefstate"
Documentation = "https://github.com/abhay-2108/beliefstate#readme"
Issues = "https://github.com/abhay-2108/beliefstate/issues"

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.25.0",
]
gemini = [
    "google-generativeai>=0.5.0",
]
ollama = [
    "ollama>=0.2.0",
]
litellm = [
    "litellm>=1.40.0",
]
local = [
    "sentence-transformers>=2.7",
    "torch>=2.0",
    "numpy>=1.20",
]
redis = [
    "redis>=5.0.0",
]
postgres = [
    "asyncpg>=0.28.0",
]
langchain = [
    "langchain-core>=0.2.0",
]
llamaindex = [
    "llama-index-core>=0.10.0",
]
fastapi = [
    "fastapi>=0.95.0",
]
flask = [
    "flask>=2.2.0",
]
all = [
    "beliefstate[openai,anthropic,gemini,ollama,litellm,local,redis,langchain,llamaindex,fastapi,flask]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "respx>=0.20.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beliefstate"]

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true

# Optional-dependency modules: type:ignore comments are needed when the
# dependency is missing, but flagged as "unused" when it IS installed.
# Disable warn_unused_ignores for these specific modules.
[[tool.mypy.overrides]]
module = [
    "beliefstate.adapters.gemini",
    "beliefstate.integrations.llamaindex",
]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "numpy",
    "numpy.*",
]
ignore_errors = true
follow_imports = "skip"




[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
