[project]
name = "beliefstate"
version = "1.2.0"
description = "A sidecar belief state tracker for LLM agents to detect contradictions and maintain persistent facts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Abhay Tiwari" }
]
keywords = ["llm", "belief-state", "memory", "contradiction-detection", "openai", "langchain", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24.0",
    "tenacity>=8.0.0",
    "aiosqlite>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/AltioraLabs/beliefstate"
Repository = "https://github.com/AltioraLabs/beliefstate"
Documentation = "https://AltioraLabs.github.io/beliefstate/"
Issues = "https://github.com/AltioraLabs/beliefstate/issues"
Changelog = "https://github.com/AltioraLabs/beliefstate/blob/main/CHANGELOG.md"

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.25.0",
]
gemini = [
    "google-generativeai>=0.5.0",
]
ollama = [
    "ollama>=0.2.0",
]
litellm = [
    "litellm>=1.40.0",
]
local = [
    "sentence-transformers>=2.7",
    "torch>=2.0",
    "numpy>=1.20",
]
redis = [
    "redis>=5.0.0",
]
postgres = [
    "asyncpg>=0.28.0",
]
langchain = [
    "langchain-core>=0.2.0",
]
llamaindex = [
    "llama-index-core>=0.10.0",
]
fastapi = [
    "fastapi>=0.95.0",
]
dashboard = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "sse-starlette>=1.6.0",
]
flask = [
    "flask>=2.2.0",
]
all = [
    "beliefstate[openai,anthropic,gemini,ollama,litellm,local,redis,postgres,langchain,llamaindex,fastapi,dashboard,flask]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "respx>=0.20.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beliefstate"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true

# Optional-dependency modules: type:ignore comments are needed when the
# dependency is missing, but flagged as "unused" when it IS installed.
# Disable warn_unused_ignores for these specific modules.
[[tool.mypy.overrides]]
module = [
    "beliefstate.adapters.gemini",
    "beliefstate.integrations.llamaindex",
]
warn_unused_ignores = false





[tool.ruff]
line-length = 88
target-version = "py310"

[tool.bandit]
exclude_dirs = ["tests", "test_package", "dashboard", "docs"]
skips = ["B101", "B110", "B311", "B324"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
